feat: 综合更新 - 后端权限与菜单模块重构、采购订单增强；前端多端应用迭代（组件库扩展、API补全、国际化、E2E测试）
- 后端：权限系统优化(RbacService/SysPermissionMapper/DataPermission)、菜单管理重构(MenuController/MenuServiceImpl)、采购订单完善(PurchaseOrder模块及测试)、用户认证更新、Flyway配置、基础实体调整

- 前端pc-admin：新增API模块(order/purchase/config/dict/erp/log/notification/profile/supplier/voucher)、扩展composables组合函数、组件库(Kanban/Calendar/Graph/ERP)、国际化、E2E测试、性能监控

- 前端mobile-admin/mobile-mall/driver-delivery：多端页面迭代、API更新、配置优化

- 新增前端packages：config/styles/utils共享模块